# ssTest

./: .clangd  .gitignore  CMakeLists.txt  Jenkinsfile  README.md
CI/: ssTestMain.gocd.yaml
Include/: main.cpp  ssTest.hpp
Src/: ssTestCheck.cpp  ssTestCodeFormatTest.cpp  ssTestExample.cpp
